[package]
name = "thclaws-core"
version = "0.10.0"
edition = "2021"
description = "thClaws — native Rust AI agent workspace with CLI and desktop GUI."
license = "MIT OR Apache-2.0"

# M6.40: Windows MSI installer config consumed by `cargo-wix`. Tells
# the WiX build which crate target binary to wrap (`thclaws`, not
# `thclaws-cli`/etc) so the .wxs `$(var.CargoTargetBinDir)\thclaws.exe`
# placeholder resolves to the GUI build. CI invokes:
#   cargo wix --no-build --bin thclaws --target x86_64-pc-windows-msvc \
#             --output dist/<archive>.msi
# after `cargo build --release --features gui`.
[package.metadata.wix]
name = "thClaws"
no-build = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "io-util", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
# WebSocket client for the LINE bridge (`crate::line`). Uses
# rustls (no system OpenSSL) to match the rest of the runtime.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures = "0.3"
# M6.36: Axum HTTP server + WebSocket upgrade powering `--serve` mode
# (single-user webapp; see docs/serve mode). Minimal feature set —
# http1 + tokio runtime + ws upgrade — keeps binary footprint small.
# Always-on (not feature-gated) per M6.36 design decision: dependency
# delta is negligible vs the wry+tao GUI deps; CLI + GUI binaries
# both ship serve mode.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "ws", "multipart", "json"] }
async-trait = "0.1"
async-stream = "0.3"
bytes = "1"
ignore = "0.4"
regex = "1"
globset = "0.4"
rustyline = "14"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.2"
url = "2"
urlencoding = "2"
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
arboard = "3"
# PDF generation backing the PdfCreate tool. Embedded Noto Sans + Noto Sans
# Thai TTFs (resources/fonts/) ship Thai-native glyphs without a system-font
# dependency. printpdf 0.7's font API takes any `Read` — we feed `&[u8]`
# from `include_bytes!`.
printpdf = { version = "0.7", features = ["embedded_images"] }
# Markdown parser used by PdfCreate to walk paragraphs, headings, lists,
# emphasis, and code blocks before laying them out in the PDF. No HTML
# features needed — we render directly to printpdf primitives.
pulldown-cmark = { version = "0.10", default-features = false }
# DOCX generation backing DocxCreate. Markdown → Word XML via docx-rs's
# document builder; renders runs/paragraphs/tables/headings/lists with
# explicit fontTable references (Calibri for Latin, Noto Sans Thai for
# Thai range) so Word picks the right glyph stream per codepoint.
docx-rs = "0.4"
# XLSX generation backing XlsxCreate. Port of the heavily-used Python
# xlsxwriter (same author, John McNamara). High-level API for cells,
# formulas, formats, autofilter, freeze panes; we use only the basic
# write-cell + auto-width subset for v1.
rust_xlsxwriter = "0.94"
# OOXML XML emit/parse — used by PptxCreate to assemble slide XML
# inside the bundled minimal pptx template, and by Tier 2's XlsxRead /
# DocxRead / PptxRead to walk extracted document.xml / sheet1.xml.
quick-xml = "0.39"
# RFC 4180 CSV parser used by XlsxCreate to ingest CSV/TSV string input.
# JSON 2D-array input is also accepted (typed cells); CSV is the more
# common form so reusing a vetted parser beats hand-rolling quote/escape.
csv = "1"
# XLSX/XLS/XLSB/ODS reader used by XlsxRead. Mature MIT/Apache crate
# with broad real-world format coverage. We only consume the read API
# (no formula evaluation) — values are pulled per-cell as their raw
# Excel-typed form (Number / String / Bool / DateTime) and serialized
# to CSV or JSON depending on the tool's `format` argument.
calamine = "0.34"
# XLSX read+modify+write used by XlsxEdit. Purpose-built for round-trip
# format preservation: load a file, mutate specific cells / sheets, save
# without touching unrelated formatting (the XLSX skill's headline
# requirement). rust_xlsxwriter is write-only and would reset every
# style on load → unsuitable for edits.
umya-spreadsheet = "2"
tao = { version = "0.34", optional = true }
wry = { version = "0.54", optional = true }
# Markdown → HTML for the Files-tab preview. GFM tables, strikethrough,
# task lists, autolinks. `unsafe_ = false` strips raw HTML (incl. scripts)
# before we hand it to the sandboxed iframe.
comrak = { version = "0.29", default-features = false, optional = true }
# Native file picker — replaces per-platform shell-out to osascript /
# zenity / PowerShell. Backported from public repo (commit 0c592ab) so
# Windows users get a working folder dialog via Win32 instead of a
# brittle PowerShell escape-fest.
rfd = { version = "0.17.2", optional = true }
# Native confirm dialog — replaces the Windows-branch PowerShell
# MessageBox shell-out. Backported from public repo (commit 7339bc0).
native-dialog = { version = "0.9.6", optional = true }
# Ed25519 signature verification for org policy files (Enterprise Edition
# foundation, dev-plan/01). `rand_core` brings in the OsRng we need for the
# `thclaws-policy-tool` keypair generator. Verifier-only callers (the main
# binary) compile without `rand_core` — the dependency lands when the
# policy-tool bin pulls it in.
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast", "pkcs8", "pem"] }
# Cron-expression parser used by the scheduling subsystem to validate
# expressions at `thclaws schedule add` time and to compute next-fire
# times in the in-process scheduler (Step 2). chrono is already a
# transitive dep, so this adds little binary weight.
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Filesystem watcher used by the scheduler daemon's `watchWorkspace`
# trigger. notify wraps the per-OS native APIs (FSEvents/inotify/
# ReadDirectoryChangesW); the debouncer coalesces editor save bursts
# (vim/VS Code emit 3-5 events per save) into single fire events.
# We use the debouncer's re-exported notify (single-version pin)
# rather than depending on `notify` directly — avoids the trait-
# mismatch that two notify majors in the dep tree would cause.
notify-debouncer-mini = "0.4"

# Promoted from dev-dependencies for runtime use by `PdfRead` (renders
# scanned-PDF pages to PNG in a tempdir for the vision-OCR fallback)
# and any future tool that needs a sandboxed scratch directory.
tempfile = "3"

# `PdfCreate` decodes user-supplied images (PNG/JPEG/etc.) to a
# `DynamicImage` before embedding into the PDF via printpdf's
# `Image::from_dynamic_image`. Pin to printpdf's transitive image
# version (0.24) so DynamicImage is the same struct on both sides —
# 0.25 produces a different `image::DynamicImage` type that printpdf
# rejects.
image = "0.24"

[features]
default = []
gui = ["dep:tao", "dep:wry", "dep:comrak", "dep:rfd", "dep:native-dialog"]

[[bin]]
name = "thclaws-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "thclaws"
path = "src/bin/app.rs"

# Operator-only: merges OpenRouter's model list into the baseline
# catalogue without overwriting hand-curated rows. Not shipped to end
# users — run locally or in CI to refresh `resources/model_catalogue.json`.
[[bin]]
name = "catalogue-seed"
path = "src/bin/catalogue_seed.rs"

# Operator/Enterprise: generate keypairs, sign policy files, verify and
# inspect existing policies. Shipped alongside the EE binary for ops use,
# also available in open-core builds for testing self-locking workflows.
[[bin]]
name = "thclaws-policy-tool"
path = "src/bin/policy_tool.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
# M6.36 SERVE7: WS client for the --serve integration test. Spins up
# `server::run` in a background task, connects via tokio-tungstenite,
# round-trips shell_input → chat_* / terminal_* envelopes.
tokio-tungstenite = "0.29"

# Embed the .ico resource into the Windows PE so Explorer / taskbar /
# alt-tab pick up the icon. Only pulled in for Windows targets; macOS
# and Linux builds skip this dependency entirely. Issue #53.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# AttachConsole(ATTACH_PARENT_PROCESS) on app startup so `--version`
# / `--help` / any print-and-exit flag get stdout when the GUI binary
# is launched from a terminal. The `windows_subsystem = "windows"`
# attribute on app.rs (required to suppress the console flicker on
# File Explorer double-click) otherwise detaches stdout entirely.
# Issue #48.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

# kill(pid, 0) probe used by the scheduler daemon's PID-file
# liveness check. Already a transitive dep via tokio + reqwest;
# pulling it in directly avoids hand-rolling extern "C" declarations.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
